--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "pagseguro/php",
-    "description": "Biblioteca de integração com o PagSeguro",
+    "name": "fabriciorabelo/pagseguro",
+    "description": "Biblioteca de integração com o PagSeguro portada para OctoberCMS",
     "license": "Apache License 2.0",
     "autoload": {
         "classmap": ["source/PagSeguroLibrary"]
